# battery-notify

./: .copier-answers.yml  .env.default  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bluetooth.py  hid_discovery.py  main.spec  pyproject.toml  requirements.txt  script.sh  startup.bat  startup.ps1
.github/: pull_request_template.md
.github/workflows/: linter.yml  unit-tests.yml
battery_notifier/: battery.py  configs.py  logs.py  main.py  main.pyw  system_tray.py
battery_notifier/devices/: __init__.py  base.py  headset.py  hid_wrapper.py  keyboard.py  mouse.py
heartrate_qt/: bluetooth_ps.ps1  devicehandler.py  main.py  simple.py
pyside/: device.py  main.py  service.py  ui_device.py  ui_service.py
scripts/: bluetooth_discovery.py  hid_discovery.py  test_dualsense.py
src/battery_notifier/: __about__.py  __init__.py  all_devices.py  logs.py  main.py  system_tray.py
src/battery_notifier/bluetooth/: get_battery_level.ps1  macos_devices.py  windows_devices.py
src/battery_notifier/devices/: __init__.py  base.py  dualsense.py  headset.py  hid_wrapper.py  k2_he.py  keyboard.py  mouse.py
src/devices/: mouse.py
src/drivers/: base.py  headset.py  mouse.py
tests/: test_battery.py
