[project]
name = "battery_notifier"
dynamic = ["version"]
requires-python = "==3.12.*"
description = "Notify when battery is low"
readme = "README.md"
authors = [{ name = "Vu LE", email = "ledkvu@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["hidapi==0.14.0.post4", "pystray==0.19.5"]

[dependency-groups]
dev = ["mypy==1.15.0", "pyinstaller>=6.10.0", "pytest==8.3.5", "ruff==0.11.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/battery_notifier/__about__.py"

[project.urls]
Repository = "https://github.com/ldkv/battery_notifier"
Documentation = "https://github.com/ldkv/battery_notifier/blob/main/README.md"
Changelog = "https://github.com/ldkv/battery_notifier/blob/main/CHANGELOG.md"

# uv configurations
[tool.uv]
package = true

# https://callowayproject.github.io/bump-my-version/
[tool.bumpversion]
current_version = "v0.2.1"
allow_dirty = false
commit = true

# Generate new version in CHANGELOG.md ONLY if there are changes under [Unreleased] section
[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[Unreleased]\n\n###"
replace = "[Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}\n\n###"

# Update version and date in package source __about__.py
[[tool.bumpversion.files]]
filename = "src/battery_notifier/__about__.py"
regex = true
search = """__version__ = \"v{current_version}\"
__date__ = \"\\d{{4}}-\\d{{2}}-\\d{{2}}\""""
replace = """__version__ = \"v{new_version}\"
__date__ = \"{now:%Y-%m-%d}\""""


# Ruff: code formatter + linter
[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C", "Q", "B", "A", "PL", "I"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

# mypy
[tool.mypy]
ignore_missing_imports = true

# pytest
[tool.pytest.ini_options]
addopts = "-vv -s"
